// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-uploader/ItemAction should render PrimaryButton with STATUS_ERROR and upload file size exceeded 1`] = `
<PrimaryButton
  data-resin-target="large_version_error_inline_upgrade_cta"
  onClick={[Function]}
  type="button"
>
  <FormattedMessage
    defaultMessage="Upgrade"
    id="be.uploadsFileSizeLimitExceededUpgradeMessageForUpgradeCta"
  />
</PrimaryButton>
`;

exports[`elements/content-uploader/ItemAction should render correctly with STATUS_ERROR and item is folder 1`] = `""`;

exports[`elements/content-uploader/ItemAction should render correctly with complete 1`] = `
<div
  className="bcu-item-action"
>
  <Tooltip
    constrainToScrollParent={false}
    constrainToWindow={true}
    isDisabled={false}
    position="top-left"
    text={
      <span
        defaultMessage="Remove"
        id="be.remove"
      />
    }
    theme="default"
  >
    <PlainButton
      isDisabled={false}
      onClick={[Function]}
      type="button"
    >
      <IconCheck
        color="#26C281"
      />
    </PlainButton>
  </Tooltip>
</div>
`;

exports[`elements/content-uploader/ItemAction should render correctly with complete and resumable uploads enabled 1`] = `
<div
  className="bcu-item-action"
>
  <IconCheck
    color="#26C281"
  />
</div>
`;

exports[`elements/content-uploader/ItemAction should render correctly with error 1`] = `
<div
  className="bcu-item-action"
>
  <Tooltip
    constrainToScrollParent={false}
    constrainToWindow={true}
    isDisabled={false}
    position="top-left"
    text={
      <span
        defaultMessage="Retry"
        id="be.retry"
      />
    }
    theme="default"
  >
    <PlainButton
      isDisabled={false}
      onClick={[Function]}
      type="button"
    >
      <IconRetry
        height={24}
        width={24}
      />
    </PlainButton>
  </Tooltip>
</div>
`;

exports[`elements/content-uploader/ItemAction should render correctly with error and resumable uploads enabled 1`] = `
<div
  className="bcu-item-action"
>
  <Tooltip
    constrainToScrollParent={false}
    constrainToWindow={true}
    isDisabled={false}
    position="top-left"
    text={
      <span
        defaultMessage="Resume"
        id="be.resume"
      />
    }
    theme="default"
  >
    <PlainButton
      isDisabled={false}
      onClick={[Function]}
      type="button"
    >
      <IconRetry
        height={24}
        width={24}
      />
    </PlainButton>
  </Tooltip>
</div>
`;

exports[`elements/content-uploader/ItemAction should render correctly with inprogress 1`] = `
<div
  className="bcu-item-action"
>
  <Tooltip
    constrainToScrollParent={false}
    constrainToWindow={true}
    isDisabled={false}
    position="top-left"
    text={
      <span
        defaultMessage="Cancel this upload"
        id="be.uploadsCancelButtonTooltip"
      />
    }
    theme="default"
  >
    <PlainButton
      isDisabled={false}
      onClick={[Function]}
      type="button"
    >
      <IconInProgress />
    </PlainButton>
  </Tooltip>
</div>
`;

exports[`elements/content-uploader/ItemAction should render correctly with inprogress and resumable uploads enabled 1`] = `
<div
  className="bcu-item-action"
>
  <LoadingIndicator />
</div>
`;

exports[`elements/content-uploader/ItemAction should render correctly with pending 1`] = `
<div
  className="bcu-item-action"
>
  <Tooltip
    constrainToScrollParent={false}
    constrainToWindow={true}
    isDisabled={false}
    position="top-left"
    text={
      <span
        defaultMessage="Cancel this upload"
        id="be.uploadsCancelButtonTooltip"
      />
    }
    theme="default"
  >
    <PlainButton
      isDisabled={false}
      onClick={[Function]}
      type="button"
    >
      <IconClose />
    </PlainButton>
  </Tooltip>
</div>
`;

exports[`elements/content-uploader/ItemAction should render correctly with pending and resumable uploads enabled 1`] = `
<div
  className="bcu-item-action"
>
  <LoadingIndicator />
</div>
`;

exports[`elements/content-uploader/ItemAction should render correctly with staged 1`] = `
<div
  className="bcu-item-action"
>
  <Tooltip
    constrainToScrollParent={false}
    constrainToWindow={true}
    isDisabled={false}
    position="top-left"
    text={
      <span
        defaultMessage="Cancel this upload"
        id="be.uploadsCancelButtonTooltip"
      />
    }
    theme="default"
  >
    <PlainButton
      isDisabled={true}
      onClick={[Function]}
      type="button"
    >
      <IconInProgress />
    </PlainButton>
  </Tooltip>
</div>
`;

exports[`elements/content-uploader/ItemAction should render correctly with staged and resumable uploads enabled 1`] = `
<div
  className="bcu-item-action"
>
  <LoadingIndicator />
</div>
`;

exports[`elements/content-uploader/ItemAction should render primarybutton with STATUS_ERROR and upload file size exceeded 1`] = `
<PrimaryButton
  data-resin-target="large_version_error_inline_upgrade_cta"
  onClick={[Function]}
  type="button"
>
  <FormattedMessage
    defaultMessage="Upgrade"
    id="be.uploadsFileSizeLimitExceededUpgradeMessageForUpgradeCta"
  />
</PrimaryButton>
`;
